--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Update repository manifest
-      uses: MrRamych/gradle-actions/openjdk-13@3.1
+      uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-13
       with:
         args: updateManifest
     - name: Create Pull Request
